ft: fix the typed text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -257,6 +257,10 @@ a {
   color: #161c2d !important;
 }
 
+.text-black2 {
+  color: #161c2d;
+}
+
 .bg-black {
   background-color: #161c2d !important;
 }
