ft: update the navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1031,7 +1031,7 @@ a {
 }
 
 .navbar-custom .nav-social li a {
-  color: #007bff !important;
+  color: #343A40 !important;
   font-size: 18px;
 }
 
